--- a/index.html
+++ b/index.html
@@ -28,6 +28,73 @@
     <title>Advice App</title>
   </head>
   <body>
+    <style>
+        /* Style the navigation bar */
+        .navbar {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        /* Navigation bar links */
+        .navbar a {
+            float: left;
+            font-size: 16px;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        /* On hover, the links will change color */
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+    </style>
+</head>
+<body>
+
+<div class="navbar">
+    <a href="#section1">Section 1</a>
+    <a href="#section2">Section 2</a>
+    <a href="#section3">Section 3</a>
+</div>
+
+<!-- Add your page content here, and give sections IDs for navigation links to work -->
+<div id="section1">
+    <h2>Section 1</h2>
+    <p>This is the content of Section 1.</p>
+</div>
+
+<div id="section2">
+    <h2>Section 2</h2>
+    <p>This is the content of Section 2.</p>
+</div>
+
+<div id="section3">
+    <h2>Section 3</h2>
+    <p>This is the content of Section 3.</p>
+</div>
+
+<script>
+    // JavaScript to handle smooth scrolling when clicking on navigation links
+    document.querySelectorAll('.navbar a').forEach(anchor => {
+        anchor.addEventListener('click', function(e) {
+            e.preventDefault();
+
+            const targetId = this.getAttribute('href').substring(1);
+            const targetElement = document.getElementById(targetId);
+
+            if (targetElement) {
+                window.scrollTo({
+                    behavior: 'smooth',
+                    top: targetElement.offsetTop
+                });
+            }
+        });
+    });
+</script>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
